# rvsim

./: .gitignore  404.html  Cargo.toml  LICENSE-APACHE  Makefile  PLAN.md  README.md  TEST_FAIL_PLAN.md  build.rs  debug.py  index.html  mkdocs.yml  pbuild.toml  pyproject.toml  rustfmt.toml  sitemap.xml
crates/bindings/: Cargo.toml
crates/bindings/src/: conversion.rs  cpu.rs  instruction.rs  lib.rs  memory.rs  snapshot.rs  stats.rs  system.rs  utils.rs  views.rs
crates/bindings/src/devices/: mod.rs  plic.rs  uart.rs  virtio.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/hardware/: Cargo.toml  Makefile  README.md
crates/hardware/src/: config.rs  lib.rs  stats.rs  trace.rs
crates/hardware/src/common/: addr.rs  constants.rs  csr_addr.rs  data.rs  error.rs  inst_size.rs  mod.rs  reg.rs  reg_idx.rs  sim_error.rs
crates/hardware/src/core/: mod.rs
crates/hardware/src/core/arch/: csr.rs  fpr.rs  gpr.rs  mod.rs  mode.rs  trap.rs  vpr.rs
crates/hardware/src/core/cpu/: csr.rs  execution.rs  memory.rs  mod.rs  trap.rs
crates/hardware/src/core/pipeline/: checkpoint.rs  engine.rs  free_list.rs  hazards.rs  latches.rs  load_queue.rs  mod.rs  prf.rs  rename_map.rs  rob.rs  scoreboard.rs  signals.rs  snapshot.rs  store_buffer.rs  traits.rs  vec_prf.rs  write_buffer.rs
crates/hardware/src/core/pipeline/backend/: mod.rs
crates/hardware/src/core/pipeline/backend/inorder/: execute.rs  issue.rs  mod.rs
crates/hardware/src/core/pipeline/backend/o3/: execute.rs  fu_pool.rs  issue_queue.rs  mod.rs
crates/hardware/src/core/pipeline/backend/shared/: commit.rs  memory1.rs  memory2.rs  mod.rs  writeback.rs
crates/hardware/src/core/pipeline/frontend/: decode.rs  fetch1.rs  fetch2.rs  mod.rs  rename.rs
crates/hardware/src/core/pipeline/stages/: decode.rs  execute.rs  fetch.rs  memory.rs  mod.rs  writeback.rs
crates/hardware/src/core/units/: mod.rs
crates/hardware/src/core/units/alu/: arithmetic.rs  bitmanip.rs  logic.rs  mod.rs  shifts.rs
crates/hardware/src/core/units/bru/: branch_predictor.rs  btb.rs  gshare.rs  mod.rs  perceptron.rs  ras.rs  static_bp.rs  tage.rs  tournament.rs
crates/hardware/src/core/units/bru/components/: folded_history.rs  ittage.rs  loop_predictor.rs  mod.rs  sc_types.rs  stat_corrector.rs  tage_core.rs  tagged_bank.rs
crates/hardware/src/core/units/bru/predictors/: gshare.rs  (+6 more)
crates/hardware/src/core/units/cache/: mod.rs  mshr.rs
crates/hardware/src/core/units/fpu/: exception_flags.rs  half.rs  mod.rs  nan_handling.rs  rounding_modes.rs
crates/hardware/src/core/units/lsu/: atomic.rs  mod.rs  ordering.rs  unaligned.rs
crates/hardware/src/core/units/mdp/: blind.rs  mem_dep_predictor.rs  mem_dep_unit.rs  mod.rs  store_set.rs  types.rs
crates/hardware/src/core/units/mmu/: mod.rs  pmp.rs  ptw.rs  tlb.rs
crates/hardware/src/core/units/prefetch/: mod.rs  next_line.rs  stream.rs  stride.rs  tagged.rs
crates/hardware/src/core/units/vpu/: alu.rs  chaining.rs  execute.rs  fpu.rs  lane_model.rs  mask.rs  mem.rs  mod.rs  permute.rs  reduction.rs  regfile.rs  types.rs  vsetvl.rs
crates/hardware/src/isa/: abi.rs  decode.rs  disasm.rs  disasm_vec.rs  instruction.rs  mod.rs
crates/hardware/src/isa/privileged/: cause.rs  mod.rs  opcodes.rs
crates/hardware/src/isa/rv64a/: funct3.rs  funct5.rs  mod.rs  opcodes.rs
crates/hardware/src/isa/rv64b/: funct3.rs  funct7.rs  mod.rs
crates/hardware/src/isa/rv64bk/: funct3.rs  funct7.rs  mod.rs
crates/hardware/src/isa/rv64d/: funct7.rs  mod.rs  opcodes.rs
crates/hardware/src/isa/rv64f/: funct3.rs  funct7.rs  mod.rs  opcodes.rs
crates/hardware/src/isa/rv64i/: funct3.rs  funct7.rs  mod.rs  opcodes.rs
crates/hardware/src/isa/rv64m/: funct3.rs  mod.rs  opcodes.rs
crates/hardware/src/isa/rv64zfh/: funct7.rs  mod.rs
crates/hardware/src/isa/rvc/: constants.rs  expand.rs  mod.rs
crates/hardware/src/isa/rvv/: encoding.rs  funct3.rs  funct6.rs  mod.rs  opcodes.rs
crates/hardware/src/sim/: dtb.rs  loader.rs  mod.rs  simulator.rs
crates/hardware/src/soc/: builder.rs  interconnect.rs  mod.rs  traits.rs
crates/hardware/src/soc/devices/: clint.rs  goldfish_rtc.rs  htif.rs  mod.rs  plic.rs  syscon.rs  uart.rs  virtio_disk.rs
crates/hardware/src/soc/memory/: buffer.rs  controller.rs  mod.rs
crates/hardware/tests/: lib.rs
crates/hardware/tests/common/: harness.rs  infrastructure_tests.rs  mod.rs
crates/hardware/tests/common/builder/: instruction.rs  mod.rs  pipeline_state.rs
crates/hardware/tests/common/mocks/: bus.rs  interrupts.rs  memory.rs  mod.rs
crates/hardware/tests/unit/: config.rs  mod.rs  stats_comprehensive.rs  stats_verification.rs
crates/hardware/tests/unit/common/: address_arithmetic.rs  constants.rs  error.rs  mod.rs  register_indexing.rs
crates/hardware/tests/unit/core/: mod.rs
crates/hardware/tests/unit/core/arch/: fpr_nan_boxing.rs  gpr.rs  mod.rs  mode.rs
crates/hardware/tests/unit/core/cpu/: execution.rs  memory.rs  trap_handling.rs
crates/hardware/tests/unit/core/csr/: access_control.rs  counters.rs  cpu_csr_operations.rs  mod.rs  trap_setup.rs
crates/hardware/tests/unit/core/pipeline/: mod.rs  wfi.rs
crates/hardware/tests/unit/core/units/: mod.rs
crates/hardware/tests/unit/isa/: decode_properties.rs  disasm.rs  disasm_all_instructions.rs  disasm_format_check.rs  disasm_vec.rs  mod.rs
crates/hardware/tests/unit/isa/rvc/: decompression_mapping.rs  mod.rs
crates/hardware/tests/unit/sim/loader/: binary_loading.rs
crates/hardware/tests/unit/soc/: clint_timer.rs  goldfish_rtc.rs  htif.rs  mod.rs  syscon.rs
crates/hardware/tests/unit/soc/devices/: plic_tests.rs
crates/hardware/tests/unit/soc/interconnect/: address_map.rs  arbitration.rs  mod.rs
crates/hardware/tests/unit/soc/memory/: buffer.rs  controller.rs  mod.rs
crates/hardware/tests/unit/soc/plic/: claiming.rs  mod.rs  priority_logic.rs
crates/hardware/tests/unit/soc/uart/: comprehensive.rs  fifo_watermarks.rs  mod.rs
crates/hardware/tests/unit/soc/virtio/: disk_operations.rs  mod.rs  queue_descriptors.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: conversion.rs  lib.rs
(+280 files in other folders)
