[workspace]
members = [
    "crates/hardware",
    "crates/bindings"
]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2024"
authors = ["Will McCallion"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/willmccallion/rvsim"
homepage = "https://github.com/willmccallion/rvsim"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.23.5" }
libc = "0.2"
object = { version = "0.36", default-features = false, features = ["read_core", "elf"] }

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "debuginfo"

# Dev builds at opt-level 1: the simulator is unusable at opt-level 0.
# Full debug info and fast incremental compiles are preserved.
[profile.dev]
opt-level = 1

# Optimize dependencies even in dev — serde/pyo3 don't need debug codegen.
[profile.dev.package."*"]
opt-level = 3
