[package]
name = "riscv-bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "riscv_emulator"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension = ["pyo3/extension-module"]

[dependencies]
riscv-core = { path = "../hardware" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.23.5", features = ["abi3-py310"] }
