[package]
name = "inspectre-bindings"
description = "Python bindings for the inspectre RISC-V simulator"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension = ["pyo3/extension-module"]

[dependencies]
inspectre = { path = "../hardware", version = "0.9.7" }
serde      = { workspace = true }
serde_json = { workspace = true }
pyo3       = { workspace = true, features = ["abi3-py310"] }
