[package]
name = "rvsim-bindings"
description = "Python bindings for the rvsim RISC-V simulator"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension = ["pyo3/extension-module"]

[dependencies]
rvsim-core = { path = "../hardware", version = "0.11.0" }
serde      = { workspace = true }
serde_json = { workspace = true }
pyo3       = { workspace = true, features = ["abi3-py310"] }
