[package]
name = "riscv-sim"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sim"
path = "src/main.rs"

[dependencies]
riscv-core = { path = "../hardware" }
riscv_emulator = { package = "riscv-bindings", path = "../bindings", default-features = false }

clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
