[package]
name = "rvsim-core"
description = "RISC-V cycle-accurate simulator core library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }

[features]
always-trace = []

[dev-dependencies]
proptest = "1.4"
mockall = "0.13"
pretty_assertions = "1.4"
rstest = "0.23"
env_logger = "0.11"
log = "0.4"
tempfile = "3.8"

[build-dependencies]
which = "6"
